# University

Symulacja-main/Program symulacyjny/symulacja-ewolucji-zwierzat/: README.md  pyproject.toml
Symulacja-main/Program symulacyjny/symulacja-ewolucji-zwierzat/projekt/: Doxyfile  animal.py  environment.py  py_filter.bat.txt  simulation.py
