[tool.poetry]
name = "projekt"
version = "0.1.0"
description = ""
authors = ["Marcel Traczyk <marceltraczyk77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "projekt.main:main"
